--- a/doc/lispref/debugging.texi
+++ b/doc/lispref/debugging.texi
@@ -820,9 +820,9 @@ be cleaner to combine them.
 
 If your program is working correctly, but you want to make it run more
 quickly or efficiently, the first thing to do is @dfn{profile} your
-code that you know how it is using resources.  If you find that one
+code so that you know how it is using resources.  If you find that one
 particular function is responsible for a significant portion of the
-runtime, you can start by looking for ways to optimize that piece.
+runtime, you can start looking for ways to optimize that piece.
 
 Emacs has built-in support for this.  To begin profiling, type
 @kbd{M-x profiler-start}.  You can choose to profile by processor
