--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-20  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/trampver.el (tramp-version): Downgrade to 2.2.6-24.3, in
+	order to distinguish from trunk.
+
 2012-11-19  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/byte-run.el (defun-declarations-alist): Don't accept
