--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,5 +1,9 @@
 2012-11-20  Eli Zaretskii  <eliz@gnu.org>
 
+	* nmake.defs: Use !if, not !ifdef.  See
+	http://lists.gnu.org/archive/html/help-emacs-windows/2012-11/msg00027.html
+	for the details.
+
 	* inc/stdint.h (INTPTR_MIN): Define for MSVC.
 
 2012-11-19  Eli Zaretskii  <eliz@gnu.org>
