--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-11-20  Daniel Colascione  <dancol@dancol.org>
+
+	* term/w32-win.el (cygwin-convert-path-from-windows): Accomodate
+	rename of cygwin_convert_path* to cygwin_convert_file_name*.
+	This change is a backport from trunk.
+
 2012-11-20  Eli Zaretskii  <eliz@gnu.org>
 
 	* simple.el (line-move): Don't call line-move-partial if
