--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-21  Glenn Morris  <rgm@gnu.org>
+
+	* debugging.texi (Profiling) [!tex]: Mention --enable-profiling.
+
 2012-11-20  Glenn Morris  <rgm@gnu.org>
 
 	* debugging.texi (Profiling): New section, in progress.
