Remove -p suffix from set-face-* functions
* lisp/faces.el (set-face-inverse-video, set-face-bold, set-face-italic):
Remove -p suffix from names, for consistency with other set-face-*.
(set-face-inverse-video): Fix interactive spec.
* lisp/play/gamegrid.el (gamegrid-make-mono-tty-face):
* lisp/textmodes/table.el (table--update-cell-face):
Use set-face-inverse-video rather than now obsolete alias.

* doc/lispref/display.texi (Attribute Functions):
Update for set-face-* name changes.

--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,5 +1,8 @@
 2012-11-21  Glenn Morris  <rgm@gnu.org>
 
+	* display.texi (Attribute Functions):
+	Update for set-face-* name changes.
+
 	* debugging.texi (Profiling): New section.
 	(Debugging): Mention profiling in the introduction.
 	* tips.texi (Compilation Tips): Move profiling to separate section.
