--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-21  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Assume POSIX 1003.1-1988 or later for unistd.h (Bug#12945).
+	* configure.ac: Do not check for getcwd or getwd.
+
 2012-11-21  Glenn Morris  <rgm@gnu.org>
 
 	* configure.ac (--enable-profiling): Doc fix.
