--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-21  Daniel Colascione  <dancol@dancol.org>
+
+	* progmodes/sql.el (sql-mode-font-lock-object-name): Support IF NOT EXISTS
+	in SQL declarations.
+
 2012-11-15  Daniel Colascione  <dancol@dancol.org>
 
 	* term/w32-win.el (w32-handle-dropped-file): Use a "file://"
