--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-22  Jay Belanger  <jay.p.belanger@gmail.com>
+
+	* calc/calc.el (calc-gregorian-switch): Refresh the Calc buffer
+	after the variable is changed.
+
 2012-11-21  Daniel Colascione  <dancol@dancol.org>
 
 	* progmodes/sql.el (sql-mode-font-lock-object-name): Support IF NOT EXISTS
